fixed extra gap above footer due to the .services top position

--- a/frontend/src/components/PhotoGrid/PhotoGrid.css
+++ b/frontend/src/components/PhotoGrid/PhotoGrid.css
@@ -16,7 +16,7 @@
     will-change: transform;
     flex: 0 0 auto; 
     width: calc((100% / 6) - 10px); /* Adjust '6' to change the number of columns */
-    height: 100%;
+    height: 150%;
     overflow: hidden;
 }
 
@@ -67,7 +67,7 @@
 .header-container {
     /* ... other styles ... */
     position: absolute;
-    top: 30%;  
+    top: 50%;  
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
