--- a/frontend/src/components/ServicesSection/ServicesSection.module.css
+++ b/frontend/src/components/ServicesSection/ServicesSection.module.css
@@ -1,8 +1,6 @@
 .services {
-    top: -400px;
     left: 0;
     right: 0;
-    bottom: 0;
     z-index: 1000; 
     display: flex;
     flex-direction: column;
@@ -12,6 +10,7 @@
     height: 100%;
     position: relative;
 }
+
 @keyframes slideAndFade {
     from {
         opacity: 0;
@@ -26,6 +25,7 @@
 .intro{
     color: rgb(71, 71, 71);
 }
+
 .serviceItem {
     opacity: 0; 
     text-align: center;
